# 2022-cpl-coding-1

./: CMakeLists.txt  LICENSE  README.md
2022-2-if-for-array/: CMakeLists.txt  Inverse2.c  collatz.c  factorial.c  obstacle.c  series.c  single.c  test.c
2022-3-for-a-while/: CMakeLists.txt  Quick-sort-v2.c  Quick-sort.c  debug_statistics.c  decimal.c  flip.c  josephus.c  palindrome.c  quick-sort-full.c  statistics.c
2022-4-loops/: CMakeLists.txt  life-one-dimension.c  life.c  matrix-mult.c  mine.c  sudoku.c  trace.c
2022-5-function/: CMakeLists.txt  absolute_prime.c  behaviors.c  magic-square.c  next-permutation.c  radix.c  sum.c
2022-6-recursion/: CMakeLists.txt  integration.c  integration_remake.c  max-non-re.c  max.c  pascal.c  poi-non-re.c  poi.c  tiles.c  triangle.c
2022-7-data-types/: CMakeLists.txt  brackets.c  buddy.c  cuboid.c  pour.c  rotate.c  stack.c  wine.c
2022-8-pointer/: CMakeLists.txt  interpreter.c  substr.c  title.c
2022-9-more-pointers/: CMakeLists.txt  stringcat.c
lesson4/: binary-search.c
lesson5/: bubble-sort.c
