cmake_minimum_required(VERSION 3.23)
project(2022_cpl_coding_1 C)


set(CMAKE_C_STANDARD 11)

add_subdirectory(2022-2-if-for-array)
add_subdirectory(lesson4)
add_subdirectory(2022-3-for-a-while)
add_subdirectory(lesson5)
add_subdirectory(2022-4-loops)
add_subdirectory(2022-5-function)
add_subdirectory(2022-6-recursion)
add_subdirectory(2022-7-data-types)
add_subdirectory(2022-8-pointer)
add_subdirectory(2022-9-more-pointers)