cmake_minimum_required(VERSION 3.23)
project(2022_cpl_coding_1 C)


set(CMAKE_C_STANDARD 11)
add_executable(test test.c)
add_executable(collatz collatz.c)
add_executable(single single.c)
add_executable(factorial factorial.c)
add_executable(series series.c)
add_executable(Inverse2 Inverse2.c)
add_executable(obstacle obstacle.c)