cmake_minimum_required(VERSION 3.23)
project(2022_cpl_coding_1 C)


set(CMAKE_C_STANDARD 11)
add_executable(flip flip.c)
add_executable(statistics statistics.c)
add_executable(josephus josephus.c)
add_executable(decimal decimal.c)
add_executable(palindrome palindrome.c)
add_executable(Quick-sort Quick-sort.c)
add_executable(debug_statistics debug_statistics.c)
add_executable(Quick-sort-v2 Quick-sort-v2.c)
add_executable(quick-sort-full  quick-sort-full.c)