cmake_minimum_required(VERSION 3.23)
project(2022_cpl_coding_1 C)


set(CMAKE_C_STANDARD 11)

add_executable(behaviors behaviors.c)
add_executable(sum sum.c)
add_executable(absolute_prime absolute_prime.c)
add_executable(radix radix.c)
add_executable(next-permutation next-permutation.c)
add_executable(magic-square magic-square.c)