cmake_minimum_required(VERSION 3.23)
project(2022_cpl_coding_1 C)


set(CMAKE_C_STANDARD 11)
add_executable(wine wine.c)
add_executable(cuboid cuboid.c)
add_executable(pour pour.c)
add_executable(rotate rotate.c)
add_executable(brackets brackets.c)
add_executable(stack stack.c)
add_executable(buddy buddy.c)